[workspace]
resolver = "2"
members = [
    "ratchet_rs",
    "ratchet_core",
    "ratchet_deflate",
    "ratchet_ext",
    "ratchet_fixture",
    "ratchet_rs/autobahn/client",
    "ratchet_rs/autobahn/server",
    "ratchet_rs/autobahn/split_client",
    "ratchet_rs/autobahn/split_server",
    "ratchet_rs/autobahn/utils"
]

[workspace.package]
version = "1.1.0"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"

[workspace.dependencies]
url = "2.1.1"
http = "1.1.0"
tokio = "1.22"
tokio-util = "0.7.4"
tokio-stream = "0.1.11"
futures = "0.3.4"
futures-util = "0.3.4"
thiserror = "1.0"
bytes = "1.0"
rand = "0.8"
sha-1 = "0.10"
base64 = "0.22"
httparse = "1.4.1"
fnv = "1.0.3"
bitflags = "2.5"
either = "1.5.3"
log = "0.4.14"
flate2 = { version = "1.0", default-features = false }
anyhow = "1.0"
serde_json = "1.0"
tracing-subscriber = "0.3.18"
