[package]
name = "ratchet_axum"
description = "Axum Integration for Ratchet"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
ratchet_rs = { version = "1.0.3", path = "../ratchet_rs" }
hyper = { workspace = true }
axum-core = { workspace = true }
hyper-util = { workspace = true , features = ["tokio"]}
pin-project = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
sha1 = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }

[[example]]
name = "axum"
