[package]
name = "ratchet_core"
version = "0.4.2"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "Async WebSocket implementation"
keywords = ["websocket", "async", "futures", "tokio"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/ratchet_core"
rust-version = "1.65"

[features]
default = []
split = ["futures"]
fixture = []

[dependencies]
ratchet_ext = { version = "0.4.2", path = "../ratchet_ext" }
url = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
futures = { workspace = true, optional = true }
futures-util = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true, features = ["std", "small_rng", "getrandom"] }
sha-1 = { workspace = true }
base64 = { workspace = true }
httparse = { workspace = true }
fnv = { workspace = true }
bitflags = { workspace = true }
either = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
futures = { workspace = true }
futures-util = { workspace = true }
