[package]
name = "ratchet_core"
description = "Async WebSocket implementation"
keywords = ["websocket", "async", "futures", "tokio", "deflate"]
readme = "README.md"
repository = "https://github.com/swimos/ratchet/ratchet_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[features]
default = []
split = ["futures"]
fixture = []

[dependencies]
ratchet_ext = { workspace = true }
url = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }
futures = { workspace = true, optional = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true, features = ["std", "small_rng", "getrandom"] }
sha-1 = { workspace = true }
base64 = { workspace = true }
httparse = { workspace = true }
fnv = { workspace = true }
bitflags = { workspace = true }
either = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
futures = { workspace = true }
futures-util = { workspace = true }
