[package]
name = "ratchet_deflate"
version = "1.0.1"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "Permessage Deflate for Ratchet"
keywords = ["websocket", "async", "futures", "tokio", "deflate"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"

[dependencies]
ratchet_ext = { version = "1.0.1", path = "../ratchet_ext" }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true, default-features = false, features = ["zlib"] }
log = { workspace = true }