[package]
name = "ratchet_deflate"
description = "Permessage Deflate for Ratchet"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
ratchet_ext = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] }
log = { workspace = true }