[package]
name = "ratchet_ext"
version = "0.4.2"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "WebSocket extensions for Ratchet"
keywords = ["websocket", "async", "futures", "tokio"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"

[dependencies]
http = { workspace = true }
httparse = { workspace = true }
bytes = { workspace = true }
