[package]
name = "ratchet_ext"
description = "WebSocket extensions for Ratchet"
keywords = ["websocket", "async", "futures", "tokio", "extensions"]
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
http = { workspace = true }
httparse = { workspace = true }
bytes = { workspace = true }
