[package]
name = "ratchet_fixture"
version = "1.0.0"
edition = "2021"
description = "Ratchet fixture"
keywords = ["websocket", "async", "futures", "tokio"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swimos/ratchet/"

[dependencies]
ratchet = { package = "ratchet_rs", version = "1.0.0", path = "../ratchet_rs", features = ["split", "deflate", "fixture"] }
tokio = { workspace = true, features = ["io-util"] }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
