[package]
name = "ratchet_fixture"
description = "Ratchet fixture"
keywords = ["websocket", "async", "futures", "tokio"]
repository = "https://github.com/swimos/ratchet/"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
ratchet = { workspace = true, features = ["split", "deflate", "fixture"] }
tokio = { workspace = true, features = ["io-util"] }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
