[package]
name = "ratchet_rs"
version = "1.0.2"
authors = ["Swim Inc. developers info@swim.ai"]
edition = "2021"
description = "Async WebSocket implementation"
keywords = ["websocket", "async", "futures", "tokio"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swimos/ratchet"

[features]
default = []
deflate = ["ratchet_deflate"]
split = ["ratchet_core/split"]
fixture = ["ratchet_core/fixture"]

[dependencies]
ratchet_core = { version = "1.0.2", path = "../ratchet_core" }
ratchet_ext = { version = "1.0.2", path = "../ratchet_ext" }
ratchet_deflate = { version = "1.0.2", path = "../ratchet_deflate", optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
bytes = { workspace = true }

[[example]]
name = "autobahn-client"
required-features = ["deflate"]

[[example]]
name = "autobahn-server"
required-features = ["deflate"]

[[example]]
name = "autobahn-split-client"
required-features = ["deflate", "split"]

[[example]]
name = "autobahn-split-server"
required-features = ["deflate", "split"]

[[example]]
name = "client"
required-features = ["split"]

[[example]]
name = "server"