[package]
name = "ratchet_rs"
description = "Async WebSocket implementation"
keywords = ["websocket", "async", "futures", "tokio", "deflate"]
readme = "README.md"
repository = "https://github.com/swimos/ratchet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[features]
default = []
deflate = ["ratchet_deflate"]
split = ["ratchet_core/split"]
fixture = ["ratchet_core/fixture"]

[dependencies]
axum = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server", "client"], optional = true }
ratchet_core = { version = "1.0.3", path = "../ratchet_core" }
ratchet_ext = { version = "1.0.3", path = "../ratchet_ext" }
ratchet_deflate = { version = "1.0.3", path = "../ratchet_deflate", optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
bytes = { workspace = true }

[[example]]
name = "autobahn-client"
required-features = ["deflate"]

[[example]]
name = "autobahn-server"
required-features = ["deflate"]

[[example]]
name = "autobahn-split-client"
required-features = ["deflate", "split"]

[[example]]
name = "autobahn-split-server"
required-features = ["deflate", "split"]

[[example]]
name = "client"
required-features = ["split"]

[[example]]
name = "server"
