[package]
name = "ratchet_rs"
description = "Async WebSocket implementation"
keywords = ["websocket", "async", "futures", "tokio", "deflate"]
readme = "README.md"
repository = "https://github.com/swimos/ratchet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true

[features]
default = []
deflate = ["ratchet_deflate"]
split = ["ratchet_core/split"]
fixture = ["ratchet_core/fixture"]

[dependencies]
ratchet_core = { workspace = true }
ratchet_ext = { workspace = true }
ratchet_deflate = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
bytes = { workspace = true }

[[example]]
name = "autobahn-client"
required-features = ["deflate"]

[[example]]
name = "autobahn-server"
required-features = ["deflate"]

[[example]]
name = "autobahn-split-client"
required-features = ["deflate", "split"]

[[example]]
name = "autobahn-split-server"
required-features = ["deflate", "split"]

[[example]]
name = "client"
required-features = ["split"]

[[example]]
name = "server"